...
            if let recipes = recipes {
                self.view?.loadRecipes(recipes, fromBeginning: showProgress)
                return
            }
            
            if let error = error {
                self.view?.showMessageWith(title: "Oops... 🧐", message: error.localizedDescription, actionTitle: "Accept")
                return
            }
            
            if !success {
                self.view?.showMessageWith(title: "Oops... 🧐", message: "Something wrong happened. Please try again", actionTitle: "Accept")
                return
...
        }
        
        FavoriteRecipeManager.shared.save(title: recipeSelected.title, href: recipeSelected.href, ingredients: recipeSelected.ingredients, thumbnail: recipeSelected.recipeUrl)
        
        NotificationCenter.default.post(name: .reloadFavoriteRecipes, object: nil)
        
        view?.showMessageWith(title: "🥘🥗🌮🥧", message: "This recipe has been saved as favorite", actionTitle: "Accept")
    }
    
    func loadMoreRecipes() {
        getRecipes(recipeSearch, showProgress: false)
    }
    
...
