...
        if tabBarConfigured { return }
        UITabBarItem.appearance().setTitleTextAttributes([NSAttributedString.Key.foregroundColor: UIColor.white(), NSAttributedString.Key.font: UIFont.mediumWithSize(size: 10.0) ?? UIFont.systemFont(ofSize: 10.0)], for: .normal)
        UITabBarItem.appearance().setTitleTextAttributes([NSAttributedString.Key.foregroundColor: UIColor.white(), NSAttributedString.Key.font: UIFont.mediumWithSize(size: 10.0) ?? UIFont.systemFont(ofSize: 10.0)], for: .selected)
        
        //__ Configure the tab bar items
        let recipesTabBarItem = UITabBarItem(title: "Recipes", image: nil, tag: 0)
        let favoritesTabBarItem = UITabBarItem(title: "Favorites", image: nil, tag: 1)
        
        //__ Setup the view controllers for the tab bar
        configureViewControllers([recipesTabBarItem, favoritesTabBarItem])
        
        tabBarConfigured = true
        
...
