...
        makeFavoriteButton.titleLabel?.font = UIFont.blackWithSize(size: 14.0)
        makeFavoriteButton.setTitleColor(.white(), for: .normal)
        makeFavoriteButton.layer.cornerRadius = makeFavoriteButton.frame.height / 2
        makeFavoriteButton.layer.borderColor = UIColor.white().cgColor
        makeFavoriteButton.layer.borderWidth = 2.0
        makeFavoriteButton.clipsToBounds = true
        makeFavoriteButton.setTitle("Make favorite", for: .normal)
        makeFavoriteButton.addTarget(self, action: #selector(makeFavoritePressed), for: .touchUpInside)
        
        hasLactoseLabel.text = "Has lactose"
        hasLactoseLabel.backgroundColor = .yellow
        hasLactoseLabel.font = UIFont.mediumWithSize(size: 17.0)
        hasLactoseLabel.transform = CGAffineTransform(rotationAngle: CGFloat.pi / 4.0)
...
